[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/health_over.png" type="Texture" id=1]
[ext_resource path="res://Assets/health_under.png" type="Texture" id=2]
[ext_resource path="res://health_bar.gd" type="Script" id=3]

[node name="health_bar" type="Control"]
script = ExtResource( 3 )

[node name="health_under" type="TextureProgress" parent="."]
margin_right = 500.0
margin_bottom = 40.0
value = 70.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 1 )
tint_progress = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health_over" type="TextureProgress" parent="."]
margin_right = 500.0
margin_bottom = 40.0
value = 50.0
texture_progress = ExtResource( 1 )
tint_progress = Color( 0.054902, 1, 0, 1 )

[node name="update_tween" type="Tween" parent="."]
